# image-editor

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README.md
app/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/public/: _headers
app/src/: index.css  main.tsx
app/src/core/: bridge.ts  types.test.ts  types.ts  worker.ts
app/src/editor/: CanvasView.tsx  DocTabs.tsx  Editor.tsx  MenuBar.tsx  NumSlider.tsx  StatusBar.tsx  ToolOptions.tsx  Toolbar.tsx  clipboard.ts  dialogs.tsx  modifiers.ts  useEditorState.ts  useShortcuts.ts
app/src/editor/panels/: ColorPanel.tsx  HistoryPanel.tsx  LayersPanel.tsx  PropertiesPanel.tsx  Section.tsx
app/src/wasm-pkg/: .gitignore  ed_wasm.d.ts  ed_wasm.js  ed_wasm_bg.wasm  ed_wasm_bg.wasm.d.ts  package.json
crates/ed-cli/: Cargo.toml
crates/ed-cli/src/: main.rs
crates/ed-core/: Cargo.toml
crates/ed-core/src/: blend.rs  color.rs  geometry.rs  ids.rs  lib.rs  value.rs
crates/ed-document/: Cargo.toml
crates/ed-document/src/: doc.rs  expr.rs  frac_index.rs  lib.rs  mirror.rs  node.rs  ops.rs  selection.rs  serialize.rs
crates/ed-engine/: Cargo.toml
crates/ed-engine/src/: filters.rs  hit.rs  lib.rs  overlay.rs  paint.rs  raster.rs  render.rs  shapes.rs  text.rs
crates/ed-io/: Cargo.toml
crates/ed-io/src/: lib.rs
crates/ed-tools/: Cargo.toml
crates/ed-tools/src/: area.rs  fragment.rs  input.rs  lib.rs  session.rs  tools.rs
crates/ed-wasm/: Cargo.toml
crates/ed-wasm/src/: lib.rs
