[package]
name = "ed-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ed"
path = "src/main.rs"

[dependencies]
ed-core = { workspace = true }
ed-document = { workspace = true }
ed-engine = { workspace = true }
ed-io = { workspace = true }
serde_json = { workspace = true }
