[package]
name = "ed-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed-core = { workspace = true }
ed-document = { workspace = true }
ed-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
zip = { workspace = true }
