[package]
name = "ed-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed-core = { workspace = true }
ed-document = { workspace = true }
ed-engine = { workspace = true }
ed-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny-skia = { workspace = true }
