[package]
name = "ed-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ed-core = { workspace = true }
ed-document = { workspace = true }
ed-engine = { workspace = true }
ed-tools = { workspace = true }
ed-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
